2007-11-08  Haavard Skinnemoen  <hskinnemoen@atmel.com>

	* utils/opcontrol: Busybox's implementation of "kill" doesn't
	  understand the "-s SIG" option. Use "-SIG" instead.

2007-11-07  Philippe Elie  <phil.el@wanadoo.fr>

	Compile fix for gcc 2.95.3
	* libpp/format_output.cpp: unused local var, then unused params
	* libpp/format_output.h:
	* libpp/op_header.cpp: missing include
	* libutil++/bfd_spu_support.cpp: gcc 2.95.3 do not like struct bfd,
	 2.95 get it wrong probably but anyway all these struct are useless.

2007-11-06  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp: for module we didn't use the right image name,
	  this bug appeared after 0.9.3 release

2007-11-05  Richard Purdie  <rpurdie@openedhand.com>

	* events/arm/armv6/events: Fix armv6 events to match mainline kernels

2007-11-04  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: nmi watchdog is now cleanly handled in the kernel
	  but it can be on by default even if CONFIG_WATCHDOG=n, a sysctl
	  exists to put it off. We need to check this in opcontrol since we
	  returned success if a counter is missing and starting oprofile with
	  oprof_start silently failed.

2007-11-03  Richard Purdie  <rpurdie@openedhand.com>

	* pp/oparchive.cpp:  Check list_files option before calling
	  create_dir() for debug files.

2007-11-03  Philippe Elie  <phil.el@wanadoo.fr>

	with --xml and --details, bfd open/close was done one time per
	symbols, not one time per application. Solved by moving open/close
	in the caller and cache bfd object, this work because --xml imply
	symbols are sorted by app name then lib name. This is not perfect as
	we can open/close multiple time bfd object with --separate=library
	but still a real win. Quick test showed an improvement by over 40
	times. Improvement grows as number of symbols per binary.
	* libpp/xml_utils.cpp: move bfd open ...
	* libpp/xml_utils.h:
	* libpp/format_output.cpp: ... here
	* libpp/format_output.h:
	* pp/opreport.cpp:
